--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,14 @@
 {
-    "version":2,
-    "buidls":[
-        {
-            "src": "dist/server.js",
-            "use":"@vercel/node",
-            "config":{"includeFiles":["dist/**"]}
-        }
-    ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"dist/server.js"
-        }
-    ]
+  "version": 2,
+  "functions": {
+    "dist/server.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/dist/server.js"
+    }
+  ]
 }
